--- a/temp_analysis_bonus_1.ipynb
+++ b/temp_analysis_bonus_1.ipynb
@@ -706,7 +706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "The difference in mean temperature between June and December is 3.9 degrees Fahrenheit. This is not much of a difference. The t-test with an extremely low p-value indicates though that the difference is statistically significant. So while the difference is meaningful, the actual difference is not, thereby indicating that you can travel to Hawaii and enjoy 70 degree temperatures year-round."
+    "The difference in mean temperature between June and December is 3.9 degrees Fahrenheit. The t-test with an extremely low p-value indicates though that the difference is statistically significant. So while the difference is meaningful, the actual difference is not, thereby indicating that you can travel to Hawaii and enjoy 70 degree temperatures year-round."
    ]
   }
  ],
